--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
 	<string name="app_name">BestB4</string>
 	<string name="action_settings">Settings</string>
+    <string name="food_item_icon_description">Food icon</string>
+    <string name="food_item_quantity_placeholder">10 litres</string>
+    <string name="food_item_name_placeholder">Milk</string>
+    <string name="food_item_best_before_placeholder">2019. 06. 07.</string>
+    <string name="food_item_expiry_placeholder">2 weeks 10 days</string>
 </resources>
