--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,13 @@
 <resources>
 	<string name="app_name">BestB4</string>
 	<string name="action_settings">Settings</string>
-	<string name="food_item_icon_description">Food icon</string>
-	<string name="food_item_quantity_placeholder">10 litres</string>
-	<string name="food_item_name_placeholder">Milk</string>
-	<string name="food_item_best_before_placeholder">2019. 06. 07.</string>
-	<string name="food_item_expiry_placeholder">2 weeks 10 days</string>
+	<string name="food_item_icon_description" translatable="false">Food icon</string>
+	<string name="food_item_quantity_placeholder" translatable="false">10 litres</string>
+	<string name="food_item_name_placeholder" translatable="false">Milk</string>
+	<string name="food_item_best_before_placeholder" translatable="false">2019. 06. 07.</string>
+	<string name="food_item_expiry_placeholder" translatable="false">2 weeks 10 days</string>
 	<string name="newfood_barcode">Barcode</string>
-	<string name="newfood_image">New Food Image</string>
+	<string name="newfood_image" translatable="false">New Food Image</string>
 	<string name="newfood_name">Name</string>
 	<string name="newfood_quantity">Quantity (eq. 1 kg, 300 ml)</string>
 	<string name="newfood_expiry_date">Expiry date</string>
